...
                        { securityQuestionAnswer in
                            self.answerSecurityQuestionCancelOrder(securityQuestionAnswer, withCompletionBlock: handler)
                        },
                        {
                            handler(
                                TradeItErrorResult(
                                    title: "Authentication failed",
                                    message: "The security question was canceled.",
                                    code: .sessionError
                                )
                            )
                        }
                    )
                case let errorResult as TradeItErrorResult:
...
