...
                                fromViewController: self,
                                showWelcomeScreen: true
                            )
                        }
                    ),
                    Action(
                        label: "Portfolio",
                        action: {
                            TradeItSDK.launcher.launchPortfolio(fromViewController: self)
                        }
                    ),
                    Action(
                        label: "Trading",
...
